--- a/po/it.po
+++ b/po/it.po
@@ -11,7 +11,7 @@ msgstr ""
 "Last-Translator: Andrea Scialpi <solopec@tiscalinet.it>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8 bit\n"
 
 #: ../src/bluefish.c:71
@@ -880,23 +880,23 @@ msgstr "  Giorno della settimana (Domenica)"
 
 #: ../src/html.c:369
 msgid "  Day of the week (Monday)"
-msgstr "  Giorno della settimana (LunedÏ)"
+msgstr "  Giorno della settimana (Luned√¨)"
 
 #: ../src/html.c:372
 msgid "  Day of the week (Tuesday)"
-msgstr "  Giorno della settimana (MartedÏ)"
+msgstr "  Giorno della settimana (Marted√¨)"
 
 #: ../src/html.c:375
 msgid "  Day of the week (Wednesday)"
-msgstr "  Giorno della settimana (MercoledÏ)"
+msgstr "  Giorno della settimana (Mercoled√¨)"
 
 #: ../src/html.c:378
 msgid "  Day of the week (Thursday)"
-msgstr "  Giorno della settimana (GiovedÏ)"
+msgstr "  Giorno della settimana (Gioved√¨)"
 
 #: ../src/html.c:381
 msgid "  Day of the week (Friday)"
-msgstr "  Giorno della settimana (VenerdÏ)"
+msgstr "  Giorno della settimana (Venerd√¨)"
 
 #: ../src/html.c:384
 msgid "  Day of the week (Saturday)"
@@ -2169,7 +2169,7 @@ msgstr "/Tags/Speciali/Scienze-Matematiche/Simbolo divisione"
 #: ../src/menu.c:238
 #, fuzzy
 msgid "/Tags/Special/Math-Science/_Plus-minus sign"
-msgstr "/Tags/Speciali/Scienze-Matematiche/Simbolo pi˘-o-meno"
+msgstr "/Tags/Speciali/Scienze-Matematiche/Simbolo pi√π-o-meno"
 
 #: ../src/menu.c:240
 #, fuzzy
@@ -4293,16 +4293,16 @@ msgstr "Frame"
 
 #~ msgid "Error: cannot run as root (for security reasons)\n"
 #~ msgstr ""
-#~ "Errore: non puÚ essere avviato come root (per motivi di sicurezza)\n"
+#~ "Errore: non pu√≤ essere avviato come root (per motivi di sicurezza)\n"
 
 #~ msgid "use -s to override\n"
 #~ msgstr "usa -s per ignorare\n"
 
 #~ msgid "Bluefish is SUID root, this is a security risk!\n"
-#~ msgstr "Bluefish Ë SUID root, questo Ë un rischio nella sicurezza!\n"
+#~ msgstr "Bluefish √® SUID root, questo √® un rischio nella sicurezza!\n"
 
 #~ msgid "Browser is not running, starting browser"
-#~ msgstr "Il browser non Ë avviato, avvio il browser"
+#~ msgstr "Il browser non √® avviato, avvio il browser"
 
 #~ msgid ""
 #~ "That looks like a secure server,\n"
@@ -4324,7 +4324,7 @@ msgstr "Frame"
 #~ msgstr "Non posso inviare dati"
 
 #~ msgid "Didn't send all the data"
-#~ msgstr "Non Ë stato possibile inviare tutti i dati"
+#~ msgstr "Non √® stato possibile inviare tutti i dati"
 
 #~ msgid "Can't open file"
 #~ msgstr "Non posso aprire il file"
@@ -4710,7 +4710,7 @@ msgstr "Frame"
 #~ msgstr "stile"
 
 #~ msgid "Insert values per property"
-#~ msgstr "Inserisci il valore per la propriet‡"
+#~ msgstr "Inserisci il valore per la propriet√†"
 
 #~ msgid "Insert values per border side"
 #~ msgstr "Inserisci un valore per il bordo di lato"
@@ -4755,7 +4755,7 @@ msgstr "Frame"
 #~ msgstr "Inserisci lo sfondo in un'unica linea"
 
 #~ msgid "size unit"
-#~ msgstr "unit‡ di grandezza"
+#~ msgstr "unit√† di grandezza"
 
 #~ msgid "percentage"
 #~ msgstr "percentuale"
@@ -5402,7 +5402,7 @@ msgstr "Frame"
 #~ "This version of Bluefish was not\n"
 #~ "compiled with imlib support. sorry."
 #~ msgstr ""
-#~ "Questa versione di Bluefish non Ë stata\n"
+#~ "Questa versione di Bluefish non √® stata\n"
 #~ "compilata con il supporto per imlib, mi dispiace."
 
 #~ msgid "URL"
