--- a/bluefish/po/nl.po
+++ b/bluefish/po/nl.po
@@ -11,7 +11,7 @@ msgstr ""
 "Last-Translator: Olav Sliekers idunno@mysun.com\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=latin-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8 bit\n"
 
 #: ../src/bluefish.c:71
@@ -1708,82 +1708,82 @@ msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/tearoff1"
 #: ../src/menu.c:118
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/A-I/_A grave"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/À"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ã€"
 
 #: ../src/menu.c:119
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/A-I/_A ac_ute"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Á"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ã"
 
 #: ../src/menu.c:120
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/A-I/_A circumflex"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Â"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ã‚"
 
 #: ../src/menu.c:121
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/A-I/_A tilde"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ã"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ãƒ"
 
 #: ../src/menu.c:122
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/A-I/_AE ligature"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Æ"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ã†"
 
 #: ../src/menu.c:123
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/A-I/_A diaeresis"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ä"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ã„"
 
 #: ../src/menu.c:124
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/A-I/_A ring"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Å"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ã…"
 
 #: ../src/menu.c:125
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/A-I/_C cedilla"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ç"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ã‡"
 
 #: ../src/menu.c:126
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/A-I/_E grave"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/È"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ãˆ"
 
 #: ../src/menu.c:127
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/A-I/_E acute"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/É"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ã‰"
 
 #: ../src/menu.c:128
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/A-I/_E circumflex"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ê"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/ÃŠ"
 
 #: ../src/menu.c:129
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/A-I/_E diaeresis"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ë"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ã‹"
 
 #: ../src/menu.c:130
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/A-I/_I grave"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ì"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/ÃŒ"
 
 #: ../src/menu.c:131
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/A-I/_I acute"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Í"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ã"
 
 #: ../src/menu.c:132
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/A-I/_I circumflex"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Î"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ã"
 
 #: ../src/menu.c:133
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/A-I/_I diaeresis"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ï"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ã"
 
 #: ../src/menu.c:134
 #, fuzzy
@@ -1797,67 +1797,67 @@ msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/tearoff1"
 #: ../src/menu.c:136
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/J-Z/_N tilde"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ñ"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ã‘"
 
 #: ../src/menu.c:137
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/J-Z/_O grave"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ò"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ã’"
 
 #: ../src/menu.c:138
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/J-Z/_O acute"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ó"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ã“"
 
 #: ../src/menu.c:139
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/J-Z/_O circumflex"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ô"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ã”"
 
 #: ../src/menu.c:140
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/J-Z/_OE ligature"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Æ"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/A-I/Ã†"
 
 #: ../src/menu.c:141
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/J-Z/_O tilde"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Õ"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ã•"
 
 #: ../src/menu.c:142
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/J-Z/_O diaeresis"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ö"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ã–"
 
 #: ../src/menu.c:143
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/J-Z/_O slash"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ø"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ã˜"
 
 #: ../src/menu.c:144
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/J-Z/_U grave"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ù"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ã™"
 
 #: ../src/menu.c:145
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/J-Z/_U acute"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ú"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ãš"
 
 #: ../src/menu.c:146
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/J-Z/_U circumflex"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Û"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ã›"
 
 #: ../src/menu.c:147
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/J-Z/_U diaeresis"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ü"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ãœ"
 
 #: ../src/menu.c:149
 #, fuzzy
 msgid "/Tags/Special/Accent/Uppercase/J-Z/_Y acute"
-msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/İ"
+msgstr "/Elementen/Speciaal/Accent/Hoofdletters/J-Z/Ã"
 
 #: ../src/menu.c:151
 #, fuzzy
@@ -1876,82 +1876,82 @@ msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/tearoff1"
 #: ../src/menu.c:155
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/A-I/_a grave"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/à"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/Ã "
 
 #: ../src/menu.c:157
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/A-I/_a acute"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/á"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/Ã¡"
 
 #: ../src/menu.c:159
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/A-I/_a circumflex"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/â"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/Ã¢"
 
 #: ../src/menu.c:161
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/A-I/_a tilde"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/ã"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/Ã£"
 
 #: ../src/menu.c:163
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/A-I/_a ring"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/å"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/Ã¥"
 
 #: ../src/menu.c:165
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/A-I/_ae ligature"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/æ"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/Ã¦"
 
 #: ../src/menu.c:167
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/A-I/_a diaeresis"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/A-I/ä"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/A-I/Ã¤"
 
 #: ../src/menu.c:169
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/A-I/_c cedilla"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/A-I/ç"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/A-I/Ã§"
 
 #: ../src/menu.c:171
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/A-I/_e grave"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/è"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/Ã¨"
 
 #: ../src/menu.c:173
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/A-I/_e acute"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/é"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/Ã©"
 
 #: ../src/menu.c:175
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/A-I/_e circumflex"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/ê"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/Ãª"
 
 #: ../src/menu.c:177
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/A-I/_e diaeresis"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/ë"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/Ã«"
 
 #: ../src/menu.c:179
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/A-I/_i grave"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/ì"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/Ã¬"
 
 #: ../src/menu.c:181
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/A-I/_i acute"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/í"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/Ã­"
 
 #: ../src/menu.c:183
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/A-I/_i circumflex"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/î"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/Ã®"
 
 #: ../src/menu.c:185
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/A-I/_i diaeresis"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/ï"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/Ã¯"
 
 #: ../src/menu.c:187
 #, fuzzy
@@ -1965,72 +1965,72 @@ msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/tearoff1"
 #: ../src/menu.c:190
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/J-Z/_n tilde"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/ñ"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/Ã±"
 
 #: ../src/menu.c:192
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/J-Z/_o grave"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/ò"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/Ã²"
 
 #: ../src/menu.c:194
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/J-Z/_o acute"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/ó"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/Ã³"
 
 #: ../src/menu.c:195
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/J-Z/_oe ligature"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/æ"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/a-i/Ã¦"
 
 #: ../src/menu.c:196
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/J-Z/_o circumflex"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/ô"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/Ã´"
 
 #: ../src/menu.c:198
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/J-Z/_o tilde"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/õ"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/Ãµ"
 
 #: ../src/menu.c:200
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/J-Z/_o diaeresis"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/ö"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/Ã¶"
 
 #: ../src/menu.c:202
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/J-Z/_o slash"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/ø"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/Ã¸"
 
 #: ../src/menu.c:204
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/J-Z/_u grave"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/ù"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/Ã¹"
 
 #: ../src/menu.c:206
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/J-Z/_u acute"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/ú"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/Ãº"
 
 #: ../src/menu.c:208
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/J-Z/_u circumflex"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/û"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/Ã»"
 
 #: ../src/menu.c:210
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/J-Z/_u diaeresis"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/ü"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/Ã¼"
 
 #: ../src/menu.c:212
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/J-Z/_y acute"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/ı"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/Ã½"
 
 #: ../src/menu.c:214
 #, fuzzy
 msgid "/Tags/Special/Accent/Lowercase/J-Z/_y diaeresis"
-msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/ÿ"
+msgstr "/Elementen/Speciaal/Accent/kleine letters/j-z/Ã¿"
 
 #: ../src/menu.c:216
 msgid "/Tags/Special/Accent/separator"
@@ -2039,7 +2039,7 @@ msgstr "/Elementen/Speciaal/Accent/separator"
 #: ../src/menu.c:217
 #, fuzzy
 msgid "/Tags/Special/Accent/U_mlaut"
-msgstr "/Elementen/Speciaal/Accent/¨"
+msgstr "/Elementen/Speciaal/Accent/Â¨"
 
 #: ../src/menu.c:218
 #, fuzzy
@@ -2049,7 +2049,7 @@ msgstr "/Elementen/Speciaal/Accent/`"
 #: ../src/menu.c:219
 #, fuzzy
 msgid "/Tags/Special/Accent/_Cedilla"
-msgstr "/Elementen/Speciaal/Accent/¸"
+msgstr "/Elementen/Speciaal/Accent/Â¸"
 
 #: ../src/menu.c:220
 #, fuzzy
@@ -2063,22 +2063,22 @@ msgstr "/Elementen/Speciaal/Munteenheid/tearoff1"
 #: ../src/menu.c:222
 #, fuzzy
 msgid "/Tags/Special/Currency/_Cent sign"
-msgstr "/Elementen/Speciaal/Munteenheid/¢"
+msgstr "/Elementen/Speciaal/Munteenheid/Â¢"
 
 #: ../src/menu.c:224
 #, fuzzy
 msgid "/Tags/Special/Currency/_Pound sterling"
-msgstr "/Elementen/Speciaal/Munteenheid/£"
+msgstr "/Elementen/Speciaal/Munteenheid/Â£"
 
 #: ../src/menu.c:226
 #, fuzzy
 msgid "/Tags/Special/Currency/C_urrency sign"
-msgstr "/Elementen/Speciaal/Munteenheid/¤"
+msgstr "/Elementen/Speciaal/Munteenheid/Â¤"
 
 #: ../src/menu.c:228
 #, fuzzy
 msgid "/Tags/Special/Currency/_Yen sign"
-msgstr "/Elementen/Speciaal/Munteenheid/¥"
+msgstr "/Elementen/Speciaal/Munteenheid/Â¥"
 
 #: ../src/menu.c:229
 #, fuzzy
@@ -2102,17 +2102,17 @@ msgstr "/Tags speciaal/Wiskunde/!"
 #: ../src/menu.c:234
 #, fuzzy
 msgid "/Tags/Special/Math-Science/_Multiplication sign"
-msgstr "/Tags speciaal/Wiskunde/×"
+msgstr "/Tags speciaal/Wiskunde/Ã—"
 
 #: ../src/menu.c:236
 #, fuzzy
 msgid "/Tags/Special/Math-Science/_Division sign"
-msgstr "/Tags speciaal/Wiskunde/÷"
+msgstr "/Tags speciaal/Wiskunde/Ã·"
 
 #: ../src/menu.c:238
 #, fuzzy
 msgid "/Tags/Special/Math-Science/_Plus-minus sign"
-msgstr "/Tags speciaal/Wiskunde/±"
+msgstr "/Tags speciaal/Wiskunde/Â±"
 
 #: ../src/menu.c:240
 #, fuzzy
@@ -2127,37 +2127,37 @@ msgstr "/Tags speciaal/Wiskunde/>"
 #: ../src/menu.c:244
 #, fuzzy
 msgid "/Tags/Special/Math-Science/Superscript _1"
-msgstr "/Tags speciaal/Wiskunde/¹"
+msgstr "/Tags speciaal/Wiskunde/Â¹"
 
 #: ../src/menu.c:246
 #, fuzzy
 msgid "/Tags/Special/Math-Science/Superscript _2"
-msgstr "/Tags speciaal/Wiskunde/²"
+msgstr "/Tags speciaal/Wiskunde/Â²"
 
 #: ../src/menu.c:248
 #, fuzzy
 msgid "/Tags/Special/Math-Science/Superscript _3"
-msgstr "/Tags speciaal/Wiskunde/³"
+msgstr "/Tags speciaal/Wiskunde/Â³"
 
 #: ../src/menu.c:250
 #, fuzzy
 msgid "/Tags/Special/Math-Science/One _quarter"
-msgstr "/Tags speciaal/Wiskunde/¼"
+msgstr "/Tags speciaal/Wiskunde/Â¼"
 
 #: ../src/menu.c:252
 #, fuzzy
 msgid "/Tags/Special/Math-Science/One _half"
-msgstr "/Tags speciaal/Wiskunde/½"
+msgstr "/Tags speciaal/Wiskunde/Â½"
 
 #: ../src/menu.c:254
 #, fuzzy
 msgid "/Tags/Special/Math-Science/_Three quarters"
-msgstr "/Tags speciaal/Wiskunde/¾"
+msgstr "/Tags speciaal/Wiskunde/Â¾"
 
 #: ../src/menu.c:256
 #, fuzzy
 msgid "/Tags/Special/Math-Science/Deg_ree sign"
-msgstr "/Tags speciaal/Wiskunde/°"
+msgstr "/Tags speciaal/Wiskunde/Â°"
 
 #: ../src/menu.c:258
 #, fuzzy
@@ -2171,32 +2171,32 @@ msgstr "/Elementen/Speciaal/Non Latin/tearoff1"
 #: ../src/menu.c:260
 #, fuzzy
 msgid "/Tags/Special/Non Latin/_ETH (Icelandic)"
-msgstr "/Elementen/Speciaal/Non Latin/Ğ"
+msgstr "/Elementen/Speciaal/Non Latin/Ã"
 
 #: ../src/menu.c:262
 #, fuzzy
 msgid "/Tags/Special/Non Latin/_THORN (Icelandic)"
-msgstr "/Elementen/Speciaal/Non Latin/Ş"
+msgstr "/Elementen/Speciaal/Non Latin/Ã"
 
 #: ../src/menu.c:264
 #, fuzzy
 msgid "/Tags/Special/Non Latin/et_h (Icelandic)"
-msgstr "/Elementen/Speciaal/Non Latin/ğ"
+msgstr "/Elementen/Speciaal/Non Latin/Ã°"
 
 #: ../src/menu.c:266
 #, fuzzy
 msgid "/Tags/Special/Non Latin/th_orn"
-msgstr "/Elementen/Speciaal/Non Latin/ş"
+msgstr "/Elementen/Speciaal/Non Latin/Ã¾"
 
 #: ../src/menu.c:267
 #, fuzzy
 msgid "/Tags/Special/Non Latin/Sharp _s"
-msgstr "/Elementen/Speciaal/Non Latin/ß"
+msgstr "/Elementen/Speciaal/Non Latin/ÃŸ"
 
 #: ../src/menu.c:268
 #, fuzzy
 msgid "/Tags/Special/Non Latin/_Micro sign"
-msgstr "/Elementen/Speciaal/Non Latin/µ"
+msgstr "/Elementen/Speciaal/Non Latin/Âµ"
 
 #: ../src/menu.c:270
 #, fuzzy
@@ -2215,62 +2215,62 @@ msgstr "/Elementen/Speciaal/Overige/spatie"
 #: ../src/menu.c:274
 #, fuzzy
 msgid "/Tags/Special/Other/_Section sign"
-msgstr "/Elementen/Speciaal/Overige/§"
+msgstr "/Elementen/Speciaal/Overige/Â§"
 
 #: ../src/menu.c:276
 #, fuzzy
 msgid "/Tags/Special/Other/_Copyright sign"
-msgstr "/Elementen/Speciaal/Overige/©"
+msgstr "/Elementen/Speciaal/Overige/Â©"
 
 #: ../src/menu.c:278
 #, fuzzy
 msgid "/Tags/Special/Other/_Left angle quotes"
-msgstr "/Elementen/Speciaal/Overige/«"
+msgstr "/Elementen/Speciaal/Overige/Â«"
 
 #: ../src/menu.c:280
 #, fuzzy
 msgid "/Tags/Special/Other/_Right angle quotes"
-msgstr "/Elementen/Speciaal/Overige/»"
+msgstr "/Elementen/Speciaal/Overige/Â»"
 
 #: ../src/menu.c:282
 #, fuzzy
 msgid "/Tags/Special/Other/Registered _trademark"
-msgstr "/Elementen/Speciaal/Overige/®"
+msgstr "/Elementen/Speciaal/Overige/Â®"
 
 #: ../src/menu.c:284
 #, fuzzy
 msgid "/Tags/Special/Other/Inverted _exclamation"
-msgstr "/Elementen/Speciaal/Overige/¡"
+msgstr "/Elementen/Speciaal/Overige/Â¡"
 
 #: ../src/menu.c:286
 #, fuzzy
 msgid "/Tags/Special/Other/Inverted _question mark"
-msgstr "/Elementen/Speciaal/Overige/¿"
+msgstr "/Elementen/Speciaal/Overige/Â¿"
 
 #: ../src/menu.c:288
 #, fuzzy
 msgid "/Tags/Special/Other/_Feminine ordinal"
-msgstr "/Elementen/Speciaal/Overige/º"
+msgstr "/Elementen/Speciaal/Overige/Âº"
 
 #: ../src/menu.c:290
 #, fuzzy
 msgid "/Tags/Special/Other/_Masculine ordinal"
-msgstr "/Elementen/Speciaal/Overige/ª"
+msgstr "/Elementen/Speciaal/Overige/Âª"
 
 #: ../src/menu.c:292
 #, fuzzy
 msgid "/Tags/Special/Other/_Pilcrow (paragraph sign)"
-msgstr "/Elementen/Speciaal/Overige/¶"
+msgstr "/Elementen/Speciaal/Overige/Â¶"
 
 #: ../src/menu.c:294
 #, fuzzy
 msgid "/Tags/Special/Other/_Broken bar"
-msgstr "/Elementen/Speciaal/Overige/¦"
+msgstr "/Elementen/Speciaal/Overige/Â¦"
 
 #: ../src/menu.c:295
 #, fuzzy
 msgid "/Tags/Special/Other/Soft _hypen"
-msgstr "/Elementen/Speciaal/Overige/­"
+msgstr "/Elementen/Speciaal/Overige/Â­"
 
 #: ../src/menu.c:296
 #, fuzzy
@@ -2280,7 +2280,7 @@ msgstr "/Elementen/Speciaal/Overige/__"
 #: ../src/menu.c:298
 #, fuzzy
 msgid "/Tags/Special/Other/Middle _dot"
-msgstr "/Elementen/Speciaal/Overige/·"
+msgstr "/Elementen/Speciaal/Overige/Â·"
 
 #: ../src/menu.c:300
 #, fuzzy
