new specfile and fixed some bugs in the translation of dynamic entries I hope all of them are fixed now also minor updates to dutch translation (for testing purposes)
git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk@245 7640d186-872a-4c71-b7b2-a5696852cc35

--- a/bluefish/po/nl.po
+++ b/bluefish/po/nl.po
@@ -2809,33 +2809,28 @@ msgid "/External/tearoff1"
 msgstr "/Extern/tearoff1"
 
 #: ../src/menu.c:436
-#, fuzzy
 msgid "/_Document"
-msgstr "documenten"
+msgstr "/_Document"
 
 #: ../src/menu.c:437
-#, fuzzy
 msgid "/Document/tearoff1"
-msgstr "/Project/tearoff1"
+msgstr "/Document/tearoff1"
 
 #: ../src/menu.c:438
-#, fuzzy
 msgid "/Document/_Type"
-msgstr "Doctype"
+msgstr "/Document/_Type"
 
 #: ../src/menu.c:439
-#, fuzzy
 msgid "/Document/Type/tearoff1"
-msgstr "/Project/Bestanden/tearoff1"
+msgstr "/Document/Type/tearoff1"
 
 #: ../src/menu.c:440
-#, fuzzy
 msgid "/Document/_Encoding"
-msgstr "Invoer codering"
+msgstr "/Document/_Codering"
 
 #: ../src/menu.c:441
 msgid "/Document/Encoding/tearoff1"
-msgstr ""
+msgstr "/Document/Codering/tearoff1"
 
 #: ../src/menu.c:442
 #, fuzzy
@@ -2978,34 +2973,29 @@ msgid "/Options/Auto indent"
 msgstr "/Opties/_Lijst"
 
 #: ../src/menu.c:633
-#, fuzzy
 msgid "/Document/Type"
-msgstr "Doctype"
+msgstr "/Document/Type"
 
 #: ../src/menu.c:647
-#, fuzzy
 msgid "/External/Browsers/"
-msgstr "/Extern/Filters/"
+msgstr "/Extern/Browsers/"
 
 #: ../src/menu.c:650
 msgid "/External/Commands/"
 msgstr "/Extern/Commando's/"
 
 #: ../src/menu.c:653
-#, fuzzy
 msgid "/External/Outputbox/"
-msgstr "/Extern/sep1"
+msgstr "/Extern/Uitvoer vlak"
 
 #: ../src/menu.c:688 ../src/menu.c:708 ../src/menu.c:963 ../src/menu.c:975
 #: ../src/menu.c:984 ../src/menu.c:998
-#, fuzzy
 msgid "/External"
-msgstr "/E_xtern"
+msgstr "/Extern"
 
 #: ../src/menu.c:706
-#, fuzzy
 msgid "/External/Outputbox"
-msgstr "/Extern/sep1"
+msgstr "/Extern/Uitvoer vlak"
 
 #: ../src/menu.c:747
 #, fuzzy
@@ -3031,9 +3021,8 @@ msgid "Could not view file in browser, the file does not yet have a name\n"
 msgstr ""
 
 #: ../src/menu.c:973
-#, fuzzy
 msgid "/External/Browsers"
-msgstr "/Extern/Filters/"
+msgstr "/Extern/Browsers/"
 
 #: ../src/menu.c:996
 #, fuzzy
@@ -4238,20 +4227,17 @@ msgstr "Aantal Frames"
 msgid "Frame's"
 msgstr "Frames"
 
-#, fuzzy
 #~ msgid "<main>/External"
-#~ msgstr "/E_xtern"
+#~ msgstr "<main>/Extern"
 
 #~ msgid "<main>/File/Open recent"
 #~ msgstr "<main>/Bestand/Recent geopend"
 
-#, fuzzy
 #~ msgid "<main>/External/Browsers"
-#~ msgstr "/Extern/Filters"
+#~ msgstr "<main>/Extern/Browsers"
 
-#, fuzzy
 #~ msgid "<main>/External/Commands"
-#~ msgstr "/Extern/Commando's"
+#~ msgstr "<main>/Extern/Commando's"
 
 #~ msgid "Error: cannot run as root (for security reasons)\n"
 #~ msgstr ""
