--- a/po/fr.po
+++ b/po/fr.po
@@ -2763,7 +2763,7 @@ msgstr "/Options/Taille des onglets/tearoff1"
 
 #: ../src/menu.c:463
 msgid "/Options/Tabsize/_Increase tabsize"
-msgstr "/Option/Taille des onglets\Augmenter la ta_ille"
+msgstr "/Option/Taille des onglets/Augmenter la ta_ille"
 
 #: ../src/menu.c:464
 msgid "/Options/Tabsize/_Decrease tabsize"
